--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/movie_frame"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.slp.artifact.MainActivity">
+    android:background="@color/colorPrimaryDark">
 
-    <ListView
-        android:id="@+id/top_Artists"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+<android.support.v7.widget.RecyclerView
+    android:id="@+id/rv_artists"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"/>
 
-</LinearLayout>
+</FrameLayout>
+
