--- a/app/src/main/res/layout/artist.xml
+++ b/app/src/main/res/layout/artist.xml
@@ -17,15 +17,16 @@
         <ImageView
             android:id="@+id/artist_image"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="6"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:layout_weight="3"
             tools:src="@drawable/artist" />
 
         <TextView
             android:id="@+id/artist_name"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="4"
+            android:layout_height="match_parent"
+            android:layout_weight="7"
             android:gravity="center"
             android:textSize="16sp"
             tools:text="Rihanna" />
