--- a/app/src/main/res/layout/activity_artist_search_results.xml
+++ b/app/src/main/res/layout/activity_artist_search_results.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/movie_frame"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.slp.artifact.artist.search.ArtistSearchResultsActivity">
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="hi"
-    android:id="@+id/search_query"/>
-</android.support.constraint.ConstraintLayout>
+    android:background="@color/colorPrimaryDark">
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_artists"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+</FrameLayout>
+
